<resources>
    <!-- <string name="app_name">kotlin4player</string> -->
    <string name="pre_game_configuration">Pre-game configuration</string>
    <string name="time_per_player_minutes">Time per player (minutes)</string>
    <string name="choose_color_for_each_player">Choose color for each player:</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="position_player_1">P 1</string>
    <string name="position_player_2">P 2</string>
    <string name="position_player_3">P 3</string>
    <string name="position_player_4">P 4</string>
    <string name="config">Config</string>
    <string name="goBack">Back</string>
    <string name="pauseButton">Pause</string>
    <string name="start">START</string>
    <string name="cancel">Cancel</string>
    <string name="main_instructions">Configure game then press START</string>
    <string name="game_running_message">Game running. Tap active player zone to end their turn.</string>
    <string name="game_paused_message">Game paused. Tap current player zone to restart their turn</string>
    <string name="ready_player_one_message">Start game by tapping the start-player zone</string>
    <string name="main_menu">Menu</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="default_game_time_minutes">10</string>
    <string name="choose_starting_player">Choose starting player position</string>
    <string name="timed_out_message">Time\'s up player %1$d!</string>
</resources>